CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(cpp)

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_STANDARD 14)
SET(GLOG_LIB glog::glog)
SET(BENCHMARK_LIB benchmark)

ADD_COMPILE_OPTIONS(-Wall)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(GTest   REQUIRED)
FIND_PACKAGE(GLog    REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIRS})

FILE(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB TESTS   ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp)
FILE(GLOB BENCH   ${CMAKE_CURRENT_SOURCE_DIR}/bench/*.cpp)

LIST(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)

ADD_LIBRARY(cpp_lib ${SOURCES})

ADD_EXECUTABLE(cpp_tests ${TESTS})
TARGET_LINK_LIBRARIES(
    cpp_tests
    cpp_lib
    ${CMAKE_THREAD_LIBS_INIT}
    ${GTEST_BOTH_LIBRARIES}
    ${GLOG_LIB}
)

ADD_EXECUTABLE(cpp_bench ${BENCH})
TARGET_LINK_LIBRARIES(
    cpp_bench
    cpp_lib
    ${CMAKE_THREAD_LIBS_INIT}
    ${GTEST_BOTH_LIBRARIES}
    ${GLOG_LIB}
    ${BENCHMARK_LIB}
)

ADD_EXECUTABLE(cpp_bin ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
TARGET_LINK_LIBRARIES(
    cpp_bin
    cpp_lib
    ${CMAKE_THREAD_LIBS_INIT}
    ${GLOG_LIB}
)

ADD_CUSTOM_TARGET(
    run_tests
    ${CMAKE_CURRENT_BINARY_DIR}/cpp_tests
    DEPENDS cpp_tests
)

ADD_CUSTOM_TARGET(
    run_bench
    ${CMAKE_CURRENT_BINARY_DIR}/cpp_bench
    DEPENDS cpp_bench
)

ADD_CUSTOM_TARGET(
    run_bin
    ${CMAKE_CURRENT_BINARY_DIR}/cpp_bin
    DEPENDS cpp_bin
)

ADD_CUSTOM_TARGET(
    lint
    ./linter.sh
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)
