CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(uthread C CXX ASM)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 14)
SET(GLOG_LIB glog::glog)
SET(BENCHMARK_LIB benchmark)

ADD_COMPILE_OPTIONS(-Wall)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(GTest   REQUIRED)
FIND_PACKAGE(GLog    REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIRS})

FILE(GLOB_RECURSE ASM   ${CMAKE_CURRENT_SOURCE_DIR}/src/*.s)
FILE(GLOB_RECURSE C     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
FILE(GLOB_RECURSE CPP   ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB         TESTS ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp)
FILE(GLOB         BENCH ${CMAKE_CURRENT_SOURCE_DIR}/bench/*.cpp)

ADD_LIBRARY(uthread_lib ${ASM} ${C} ${CPP})

ADD_EXECUTABLE(uthread_tests ${TESTS})
TARGET_LINK_LIBRARIES(
    uthread_tests
    uthread_lib
    ${CMAKE_THREAD_LIBS_INIT}
    ${GTEST_BOTH_LIBRARIES}
    ${GLOG_LIB}
)

ADD_EXECUTABLE(uthread_bench ${BENCH})
TARGET_LINK_LIBRARIES(
    uthread_bench
    uthread_lib
    ${CMAKE_THREAD_LIBS_INIT}
    ${GTEST_BOTH_LIBRARIES}
    ${GLOG_LIB}
    ${BENCHMARK_LIB}
)

ADD_CUSTOM_TARGET(
    run_tests
    ${CMAKE_CURRENT_BINARY_DIR}/uthread_tests
    DEPENDS uthread_tests
)

ADD_CUSTOM_TARGET(
    run_bench
    ${CMAKE_CURRENT_BINARY_DIR}/uthread_bench
    DEPENDS uthread_bench
)

ADD_CUSTOM_TARGET(
    lint
    ./linter.sh
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)
